# cpp-binginds-for-gstreamer

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/gstcpp/: CMakeLists.txt
src/gstcpp/src/: CMakeLists.txt
